# SlicerLineProfile

./: CMakeLists.txt  LICENSE  README.md
LineProfile/: LineProfile.py
